<resources>
    <string name="app_name">VisitorApp</string>

    <!--the default font-->
    <string name="fontFamily__roboto_regular">sans-serif</string>
    <string name="fontFamily__roboto_light">sans-serif-light</string>
    <string name="fontFamily__roboto_condensed">sans-serif-condensed</string>
    <string name="admin_login">Admin Login</string>
    <string name="welcome_to_service_foods_auckland">Welcome to Service Foods - Auckland</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_remenber_to_sign_out_when_exiting_the_building">Please remenber to sign out when exiting the building</string>

    <string name="visitor_guideline">
    \u2022 All visitors must have authorisation to enter any area where public is excluded.\n\n
   \u2022 Where required or designated, approved safety equipment must be used.\n\n
    \u2022 All areas must be kept clear and free of hazards.\n\n
    \u2022 Be aware of moving hazards such as vehicles/fork lifts and mobile plant.\n\n
   \u2022 Follow recommended procedures for handling hazardous materials.\n\n
  \u2022 Keep aisles, exits, driveways and fire-extinguisher accesses clear.\n\n
    \u2022 Before entering any area observe safety signs and rules.\n\n
   \u2022 Report all accidents and incidents, including near misses to the Manager.\n\n
    \u2022 Be fully aware of evacuation and emergency procedures.\n\n
    \u2022 Maintain an appropriate standard of housekeeping and general hygiene.\n\n</string>
    <string name="please_write_the_full_name_of_all_the_members_seperate_names_by_comma">Please write the full name of all the Members Seperate names by Comma(,)</string>
    <string name="hazards_info">
    \u2022 Wet/Slippery Floors - Keep floor clean &amp; dry. Wear non slip shoes\n\n
        \u2022 Electricity - Follow insulation procedures &amp; turn off and unplug power supply when working on electrical equipment.\n\n
    \u2022 Sharp Surfaces - Many edges can be sharp. Check carefully before starting. Report unsafe edges to Manager.\n\n
    \u2022 Traffic/Fork Lift operation - Be aware of moving hazards such as vehicles &amp; forklifts. All areas must be kept clear at all times.\n\n
</string>
    <string name="emergency_procedures_info">
    \u2022 Evacuate through nearest exit when instructed by manager or on alarm \–\n\n

      \u2022 Identify exits\n\n \u2022 Identify managers\n\n \u2022 Identify Assembly point </string>
    <string name="accident_near_miss_reporting_info">\u2022 Inform to Manager immediately</string>
    <string name="work_area_is_tidy_and_clear_of_tools">\u2022 Work area is tidy and clear of tools</string>
    <string name="compliance_with_minimum_standards">
    \u2022 Work doesn’t impact on employee safety\n\n
    \u2022 Work site is secure at all times. Hazards are controlled and warning signs are posted.\n\n
    \u2022 I agree to do the work that has been authorised.\n\n
    \u2022 I agree to meet the requirements above and take note of the hazard. I have declared the hazards I will bring into the premises. I confirm that I have the necessary current qualification to do the work. I will follow company’s procedures as instructed by Manager or Owner.\n\n
</string>

    <string name="set_date_time"><![CDATA[Set Date & Time]]></string>

    <string name="no_internet">No internet connection available.</string>
    <string name="company_selected">companyselected</string>
    <string name="purpose_selected">purposeselected</string>
    <string name="meeting_selected">meetingselected</string>
    <string name="datefrom_selected">datefromselected</string>
    <string name="dateto_selected">datetoselected</string>

    <string name="ok">OK</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_file_rationale">permission is needed to  Save preview.</string>
    <string name="permision_available_file">Permission has been granted. Preview can now be Save.</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="visitor_id">Visitor ID: </string>
    <string name="date_of_visit">Date of Visit: </string>
    <string name="name">Name: </string>
    <string name="company_name">Company Name: </string>
    <string name="car_registration_no">Car Registration No: </string>
    <string name="purpose_of_visit">Purpose of Visit: </string>
    <string name="meeting_with">Meeting with: </string>
    <string name="time_in_hh_mm_ss">Time In(hh:mm:ss): </string>
    <string name="time_out_hh_mm_ss">Time Out(hh:mm:ss): </string>
    <string name="time_spent_hh_mm_ss">Time Spent(hh:mm:ss): </string>

</resources>
