<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_color"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_app_logo" />

                <TextView
                    android:id="@+id/admin_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="right"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/admin_login"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_18sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="center"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/welcome_to_service_foods_auckland"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_24sp" />


                <TextView
                    android:id="@+id/system_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:padding="@dimen/padding_10dp"
                    android:text="Date : "
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:id="@+id/system_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:padding="@dimen/padding_10dp"
                    android:text="Time : "
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:id="@+id/signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_25dp"
                    android:layout_marginRight="@dimen/margin_25dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@drawable/custom_button_background"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="center"
                    android:padding="@dimen/padding_20dp"
                    android:text="@string/sign_in"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_20sp" />


                <TextView
                    android:id="@+id/signOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_25dp"
                    android:layout_marginRight="@dimen/margin_25dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@drawable/custom_button_background"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="center"
                    android:padding="@dimen/padding_20dp"
                    android:text="@string/sign_out"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/please_remenber_to_sign_out_when_exiting_the_building"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_18sp" />

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>