<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/admin_list_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/card_like_background"
    android:elevation="@dimen/elevation_4dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/main_job_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="@dimen/card_elevation_4dp"
        card_view:cardMaxElevation="@dimen/card_elevation_6dp"
        card_view:contentPadding="@dimen/padding_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_marginTop="48dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_app_logo" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/custom_receipt_background"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/visitor_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/visitor_id"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/date_of_visit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"

                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/date_of_visit"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/name"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/company_name"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/car_registration_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/car_registration_no"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/purpose_of_visit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/purpose_of_visit"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/meeting_with"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/meeting_with"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/time_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/time_in_hh_mm_ss"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/time_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/time_out_hh_mm_ss"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/time_spent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/padding_5dp"
                    android:paddingLeft="@dimen/padding_2dp"
                    android:paddingRight="@dimen/padding_5dp"
                    android:paddingTop="@dimen/padding_5dp"
                    android:text="@string/time_spent_hh_mm_ss"
                    android:textAlignment="gravity"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:background="@android:color/darker_gray" />


            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>