<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/card_like_background"
        android:elevation="@dimen/elevation_6dp"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_color"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|top"
                android:orientation="vertical"
                android:padding="@dimen/padding_5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingTop="@dimen/padding_10dp"
                    android:text="Contractor"
                    android:textAllCaps="false"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="left"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingTop="@dimen/padding_10dp"
                    android:text="Hazards"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="left"
                    android:text="@string/hazards_info"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_18sp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="left"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingTop="@dimen/padding_10dp"
                    android:text="Emergency Procedures"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="left"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingTop="@dimen/padding_10dp"
                    android:text="@string/emergency_procedures_info"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_18sp"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="left"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingTop="@dimen/padding_10dp"
                    android:text="Accident/Near Miss Reporting -"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="left"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingTop="@dimen/padding_10dp"
                    android:text="@string/accident_near_miss_reporting_info"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="left"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingTop="@dimen/padding_10dp"
                    android:text="Compliance with Minimum Standards - "
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="left"
                    android:text="@string/work_area_is_tidy_and_clear_of_tools"

                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_18sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="left"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingTop="@dimen/padding_10dp"
                    android:text="@string/compliance_with_minimum_standards"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:id="@+id/agree_acknowlede_contractor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_25dp"
                    android:layout_marginRight="@dimen/margin_25dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:background="@drawable/custom_button_background"
                    android:fontFamily="@string/fontFamily__roboto_condensed"
                    android:gravity="center"
                    android:padding="@dimen/padding_20dp"
                    android:layout_marginBottom="@dimen/margin_40dp"
                    android:text="Acknowledge and Continue"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_20sp" />


            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>